<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/gradient"
        android:fontFamily="@font/montserrat_alternates"
        tools:context=".MenuActivity">

    <FrameLayout
            android:id="@+id/frameLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        <TextView
                android:id="@+id/tvRating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#FFFDFD" android:textSize="34sp"
                android:fontFamily="@font/montserrat_alternates"
                android:text="@string/menu"
                android:layout_marginStart="120dp"
                android:layout_marginTop="10dp"
        />
        <TextView
                android:id="@+id/tvSubtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#FFFDFD" android:textSize="14sp" android:fontFamily="@font/montserrat_alternates"
                android:text="Peliculas"
                android:layout_marginStart="160dp"
                android:layout_marginTop="55dp"
        />

    </FrameLayout>

    <GridView
            android:id="@+id/my-grid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_alternates"
            android:columnWidth="150dp"
            android:horizontalSpacing="15dp"
            android:numColumns="2"
            android:layout_below="@id/frameLayout"
            android:verticalSpacing="10dp"
            android:layout_marginBottom="80dp"
    />

    <Button
            android:id="@+id/btnMenuLogin"
            android:text="@string/login"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:backgroundTint="#233977" android:textColor="#FFFFFF"
            android:layout_marginTop="670dp"
            android:layout_marginLeft="70dp"
            android:fontFamily="@font/montserrat_alternates"/>
    <Button
            android:id="@+id/btnMenuRating"
            android:text="@string/rating"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:backgroundTint="#233977" android:textColor="#FFFFFF"
            android:layout_marginTop="670dp"
            android:layout_marginLeft="210dp"
            android:fontFamily="@font/montserrat_alternates"/>

</RelativeLayout>